# deko

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  FEATURES.md  README.md  agent.py  clippy.toml  deko.db  docker-compose.yml  package-lock.json  package.json  tsconfig.json
.github/workflows/: ci.yml  release.yml
admin/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.app.tsbuildinfo  vite.config.ts
admin/src/: App.tsx  index.css
admin/src/api/: client.ts
admin/src/components/: charts.tsx  layout.tsx  status-badge.tsx  theme-toggle.tsx
admin/src/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx  select.tsx  table.tsx
admin/src/hooks/: use-auth.tsx  use-websocket.tsx
admin/src/pages/: action-detail.tsx  actions.tsx  agents.tsx  audit-log.tsx  dashboard.tsx  login.tsx  policies.tsx  verdicts.tsx
admin/src/types/: index.ts
data/: deko.db
docs/: examples.md  featurelist.md  grafana.json  operations.md  policy-templates.md  postman.json  prometheus.yml  prompts.md
helm/deko/: Chart.yaml  values.yaml
k8s/: deployment.yaml
migrations/: 001_create_agents.sql  002_create_actions.sql  003_create_verdicts.sql  004_create_policies.sql  005_create_audit_log.sql  008_add_idempotency_key.sql  010_add_action_priority.sql  011_add_agent_webhook.sql  014_add_policy_version.sql  015_create_attachments.sql
migrations_postgres/: 002_create_actions.sql  004_create_policies.sql  006_add_deactivation_reason.sql  007_add_key_expiry.sql  009_add_policy_schedule.sql  012_create_api_keys.sql  013_add_execute_at.sql
migrations_sqlite/: 001_create_agents.sql  003_create_verdicts.sql  005_create_audit_log.sql
src/: config.rs  db.rs  error.rs  lib.rs  main.rs  redact.rs  test_helpers.rs
src/middleware/: auth.rs  jwt.rs
src/models/: action.rs  agent.rs  api_key.rs  attachment.rs  audit_log.rs  enums.rs  mod.rs  policy.rs  verdict.rs
src/routes/: actions.rs  admin.rs  admin_ws.rs  api_admin.rs  attachments.rs  auth.rs  health.rs  mod.rs  oauth.rs  policies.rs  token.rs  ws.rs
src/services/: attachment.rs  llm.rs  metrics.rs  mod.rs  oauth.rs  openai.rs  processor.rs  prompt_injection.rs  verdict.rs  webhook.rs  ws_broadcaster.rs
src/services/providers/: anthropic.rs  azure_openai.rs  bedrock.rs  custom.rs  gemini.rs  mod.rs  ollama.rs  openai.rs
static/: app.js  style.css
templates/: action_detail.html  actions_list.html  agent_management.html  audit_log.html  base.html  dashboard.html  login.html  policy_management.html  verdict_history.html
tests/: integration.rs  k6.js  unit.proptest-regressions  unit.rs
ts/: app.ts
