[package]
name = "deko"
version = "0.1.0"
edition = "2021"
description = "AI Agent Action Watchdog - Middleware for autonomous agent safety"
authors = ["Harsha"]

[features]
default = ["sqlite"]
sqlite = ["sqlx/sqlite"]
postgres = ["sqlx/postgres"]

[dependencies]
axum = { version = "0.8", features = ["macros", "multipart", "ws"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "macros", "chrono", "uuid"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "stream"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["full"] }
askama = { version = "=0.12.1", features = ["mime", "mime_guess"] }
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
axum-extra = { version = "0.10", features = ["cookie", "typed-header", "multipart"] }
base64 = "0.22"
sha2 = "0.10"
hex = "0.4"
axum-macros = "0.5"
utoipa = { version = "5", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }
regex = "1"
mime = "0.3"
mime_guess = "2"
headers = "0.4"
http = "1"
async-trait = "0.1"
jsonwebtoken = "9"
futures = "0.3"
oauth2 = "4"
url = "2"
aws-sdk-bedrockruntime = "1"
aws-config = "1"
aws-types = "1"

[dev-dependencies]
mockito = "1"
proptest = "1"
tokio-test = "0.4"

[profile.release]
opt-level = 3
lto = true
strip = true
